--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,10 @@ body {
   font-family: var(--primary-font-family);
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 ul {
   list-style: none;
   padding: 0;
@@ -142,118 +146,6 @@ textarea {
 
 .logo--inverse {
   color: var(--reserve-text-color);
-}
-
-.header {
-  border-bottom: 1px solid #ececec;
-}
-
-.header .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.site-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.site-nav__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: 93px;
-}
-
-.site-nav__item:not(:last-child),
-.contacts__item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.contacts {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: auto;
-}
-
-.site-nav__link {
-  color: var(--primary-text-color);
-}
-
-.site-nav__link,
-.contacts__link {
-  position: relative;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  -webkit-transition: color var(--timing-fn);
-  transition: color var(--timing-fn);
-}
-
-.site-nav__link:hover, .site-nav__link:focus,
-.contacts__link:hover,
-.contacts__link:focus {
-  color: var(--accent-text-color);
-}
-
-.current {
-  color: var(--accent-text-color);
-}
-
-.current::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-text-color);
-  border-radius: 2px;
-  -webkit-transform: translateY(25%);
-          transform: translateY(25%);
-}
-
-.contacts__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: var(--secondary-text-color);
-}
-
-.contacts__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.contacts__icon {
-  margin-right: 10px;
-  fill: currentColor;
 }
 
 .footer {
@@ -498,7 +390,7 @@ textarea {
   top: 0;
   left: 0;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   overflow-y: scroll;
   opacity: 1;
@@ -524,6 +416,7 @@ textarea {
 .modal {
   position: relative;
   padding: 40px;
+  margin: auto;
   border-radius: 4px;
   background-color: var(--reserve-text-color);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -559,6 +452,7 @@ textarea {
   height: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+  background-color: #fff;
   fill: currentColor;
   outline: none;
   -webkit-transition: color var(--timing-fn);
@@ -572,7 +466,7 @@ textarea {
 @media screen and (max-width: 1199px) {
   .modal {
     width: 450px;
-    height: 609px;
+    max-height: 609px;
   }
 }
 
@@ -581,17 +475,6 @@ textarea {
     width: 528px;
     height: 581px;
   }
-}
-
-.modal-form__title {
-  display: block;
-  margin-bottom: 12px;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.5;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--primary-text-color);
 }
 
 .modal-form__field {
@@ -739,6 +622,16 @@ textarea {
           clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.modal-form__title {
+  display: block;
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
 }
 
 @media screen and (min-width: 1200px) {
