--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,6 +8,9 @@ html {
 }
 body {
   font-family: var(--primary-font-family);
+  &.modal-open {
+    overflow: hidden;
+  }
 }
 ul {
   list-style: none;
