--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -1,14 +1,3 @@
-.modal-form__title {
-  display: block;
-  margin-bottom: 12px;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.5;
-  text-align: center;
-  letter-spacing: 0.03em;
-
-  color: var(--primary-text-color);
-}
 .modal-form__field {
   position: relative;
 
@@ -107,6 +96,17 @@
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+.modal-form__title {
+  display: block;
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  // line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--primary-text-color);
 }
 @media screen and (min-width: 1200px) {
   .modal-form__title {
