--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,7 +4,7 @@
   left: 0;
 
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   overflow-y: scroll;
   opacity: 1;
@@ -23,6 +23,7 @@
   // left: 50%;
 
   padding: 40px;
+  margin: auto;
   border-radius: 4px;
   background-color: var(--reserve-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -46,6 +47,7 @@
   height: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+  background-color: #fff;
   fill: currentColor;
   outline: none;
   transition: color var(--timing-fn);
@@ -59,7 +61,7 @@
 @media screen and (max-width: 1199px) {
   .modal {
     width: 450px;
-    height: 609px;
+    max-height: 609px;
   }
 }
 
