--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,78 +1,78 @@
-.header {
-  border-bottom: 1px solid #ececec;
-  .container {
-    display: flex;
-    align-items: center;
-  }
-}
-.site-nav {
-  display: flex;
-  align-items: center;
-}
-.site-nav__list {
-  display: flex;
-  align-items: center;
-  margin-left: 93px;
-}
-.site-nav__item:not(:last-child),
-.contacts__item:not(:last-child) {
-  margin-right: 50px;
-}
-.contacts {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-}
-.site-nav__link {
-  color: var(--primary-text-color);
-}
-.site-nav__link,
-.contacts__link {
-  position: relative;
+// .header {
+//   border-bottom: 1px solid #ececec;
+//   .container {
+//     display: flex;
+//     align-items: center;
+//   }
+// }
+// .site-nav {
+//   display: flex;
+//   align-items: center;
+// }
+// .site-nav__list {
+//   display: flex;
+//   align-items: center;
+//   margin-left: 93px;
+// }
+// .site-nav__item:not(:last-child),
+// .contacts__item:not(:last-child) {
+//   margin-right: 50px;
+// }
+// .contacts {
+//   display: flex;
+//   align-items: center;
+//   margin-left: auto;
+// }
+// .site-nav__link {
+//   color: var(--primary-text-color);
+// }
+// .site-nav__link,
+// .contacts__link {
+//   position: relative;
 
-  padding-top: 32px;
-  padding-bottom: 32px;
+//   padding-top: 32px;
+//   padding-bottom: 32px;
 
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+//   font-weight: 500;
+//   font-size: 14px;
+//   line-height: 1.14;
+//   letter-spacing: 0.02em;
 
-  transition: color var(--timing-fn);
+//   transition: color var(--timing-fn);
 
-  &:hover,
-  &:focus {
-    color: var(--accent-text-color);
-  }
-}
+//   &:hover,
+//   &:focus {
+//     color: var(--accent-text-color);
+//   }
+// }
 
-.current {
-  color: var(--accent-text-color);
-  &::after {
-    content: '';
+// .current {
+//   color: var(--accent-text-color);
+//   &::after {
+//     content: '';
 
-    position: absolute;
-    left: 0;
-    bottom: 0;
+//     position: absolute;
+//     left: 0;
+//     bottom: 0;
 
-    display: block;
-    width: 100%;
-    height: 4px;
-    background-color: var(--accent-text-color);
-    border-radius: 2px;
-    transform: translateY(25%);
-  }
-}
-.contacts__link {
-  display: flex;
-  align-items: center;
-  color: var(--secondary-text-color);
-}
-.contacts__item {
-  display: flex;
-  align-items: center;
-}
-.contacts__icon {
-  margin-right: 10px;
-  fill: currentColor;
-}
+//     display: block;
+//     width: 100%;
+//     height: 4px;
+//     background-color: var(--accent-text-color);
+//     border-radius: 2px;
+//     transform: translateY(25%);
+//   }
+// }
+// .contacts__link {
+//   display: flex;
+//   align-items: center;
+//   color: var(--secondary-text-color);
+// }
+// .contacts__item {
+//   display: flex;
+//   align-items: center;
+// }
+// .contacts__icon {
+//   margin-right: 10px;
+//   fill: currentColor;
+// }
